JumpScript/tests/baselines/reference/parserExportAssignment4.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment4.jump(1,10): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment4.jump (1 errors) ====
    export = ;
             ~
!!! error TS1109: Expression expected.